Implemented new remove function

--- a/Todo/todo.html
+++ b/Todo/todo.html
@@ -45,13 +45,27 @@
             var li = document.createElement('li');
             var checkbox = document.createElement('input');
             var textInside = document.createTextNode(data.info);
+
+            var span = document.createElement('span');
+            span.innerHTML = 'X';
+            span.onclick = remove;
+
             checkbox.type = 'checkbox';
             checkbox.value = key;
             checkbox.checked = data.status;
             checkbox.setAttribute('onchange', 'updateJSON()');
             li.appendChild(textInside);
             li.appendChild(checkbox);
+            li.appendChild(span);
             document.querySelector('#taskList').appendChild(li);
+        }
+
+
+        function remove(e) {
+            var index = this.previousElementSibling.value;
+            taskList.innerHTML = '';
+            dataJSON.splice(index, 1)
+            buildCheckboxes(dataJSON);
         }
 
         function buildCheckboxes(data) {
