--- a/AJAX/ajax.html
+++ b/AJAX/ajax.html
@@ -10,18 +10,14 @@
     <div id="output">
     </div>
     <ul id="info"></ul>
-    <button id="loadNew">Load</button>
+    <button id="loadNew">Get a Joke</button>
 
     <script>
         var output = document.getElementById('output');
-        var info = document.getElementById('info');
         var buttonClick = document.getElementById('loadNew');
         buttonClick.addEventListener('click', function () {
             loadAjax();
         })
-
-
-
 
 
         function loadAjax() {
@@ -31,15 +27,15 @@
                 if (request.readyState == 4 && request.status == 200) {
 
                     var json = JSON.parse(request.responseText);
-                    var data = json.results[0];
-                    var name = '<h1>' + data.name.title + ' ' + data.name.first + ' ' + data.name.last + '</hr>'
-                    var message = name + '<br><img src=' + data.picture.large + '>';
-                    output.innerHTML = message;
+                    var icon = '<img src=' + json.icon_url + '>';
+                    var data = json.value;
+                    var message = data;
+                    output.innerHTML = icon + '<br>' + '<h2>' + message + '</h2>';
                     console.log(data);
 
                 }
             }
-            request.open('GET', 'https://randomuser.me/api', true);
+            request.open('GET', 'https://api.chucknorris.io/jokes/random', true);
             request.send();
         }
 
