--- a/AJAX/ajax.html
+++ b/AJAX/ajax.html
@@ -6,13 +6,56 @@
 </head>
 
 <body>
-    <h1>AJAX</h1>
-    <div id="output">
-    </div>
-    <ul id="info"></ul>
-    <button id="loadNew">Get a Joke</button>
+    <h1>AJAX POST</h1>
+    <form id="myForm">
+        <input type="text" name="first" value="Laurence">
+        <br>
+        <input type="text" name="last" value="Svekis">
+        <br>
+        <input type="text" name="company" value="Discoveryvip">
+        <br>
+        <input type="submit" value="Send my data">
+    </form>
 
     <script>
+        var myForm = document.getElementById('myForm');
+        myForm.addEventListener('submit', function (e) {
+            e.preventDefault();
+            // var data = JSON.stringify(formData((myForm)));
+            loadJSON(formData((myForm)))
+        })
+
+        function formData(form) {
+            var el = form.querySelectorAll('input[type="text"]');
+            var myData = '';
+            for (var x = 0; x < el.length; x++) {
+                var name = el[x].name;
+                var value = el[x].value;
+                // myData[name] = value;
+                myData += name + '=' + value + '&'
+            }
+            return myData.slice(0, -1);
+        }
+
+
+        function loadJSON(data) {
+            const url = 'http://s179017901.onlinehome.us/discoveryvip/';
+            const myData = data;
+            fetch(url, {
+                method: 'post',
+                headers: { "Content-type": "application/x-www-form-urlencoded; charset=UTF-8" },
+                body: myData
+            })
+                .then(function (response) {
+                    return response.json()
+                })
+                .then(function (data) {
+                    console.log(data);
+                })
+                .catch(error => console.log(error))
+        }
+    </script>
+    <!-- <script>
         var output = document.getElementById('output');
         var buttonClick = document.getElementById('loadNew');
         buttonClick.addEventListener('click', function () {
@@ -39,7 +82,7 @@
             console.log(error);
         }
 
-    </script>
+    </script> -->
 </body>
 
 </html>
